syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
option csharp_namespace = "Magnet.Protos";

package magnet;


service Messenger{
  rpc GetMessages( MessagesRequest) returns ( stream MagnetMessage);

  rpc AddReadReceipt(ReceivedReceipt) returns  (google.protobuf.Empty);
}

message MessagesRequest {
  string clientName = 1;
}

message MagnetMessage{

  string type = 1;
  string from = 2;
  string body = 3;
  string provider = 4;
  repeated string to = 5;
  google.protobuf.Timestamp ReceivedAt = 6;

  map<string, string> properties = 7;
  string id = 8;
}

message ReceivedReceipt{
  string MessageId = 1;
  string clientName = 2;
  google.protobuf.Timestamp ReceivedAt = 3;
  bool IsMatch = 4;
}
